# NN-japanese-speaker

./: .gitignore  .ruff.toml  Makefile  README.md  config.yaml  exp_augmentation.py  exp_augmentation_study.db  exp_augmentation_study_v2.db  main.py  optuna_augment.sh  optuna_study.db  parallel_tuning.py  parrellel_tuning.py  pyproject.toml  requirements.txt  slurm-24972959.out  slurm-24972979.out  slurm-24972980.out  slurm-24985126.out  slurm-24985127.out  slurm-24985129.out  slurm-24985168.out  slurm-24994051.out  train_haiku.sh
IMPORTANT OUTPUTS/: 97%acc.out  cpu_in_config_error.out  optuna_on_cpu_rest_gpu.out
config/: config.py  config.yaml
habrok_jobs/: main.sh
habrok_shared/: optuna_study.db
japanese_speaker_recognition/: config.py  data_augmentation.py  data_embedding.py  dataset.py  plots.py
japanese_speaker_recognition/core/: base.py  pipeline.py  registry.py
japanese_speaker_recognition/features/: flatten.py
japanese_speaker_recognition/metrics/: __init__.py  classification.py
japanese_speaker_recognition/modeling/: Untitled.yaml  train.py  train_xgboost.py
japanese_speaker_recognition/models/: HAIKU.py  cnn.py  random_forest.py
japanese_speaker_recognition/optimization/: __init__.py  optuna_tuner.py
models/: XGBoost.py  random_forest.py  trained_model.onnx
models_1.0drop/: trained_model.onnx
models_1.0drop_v5/: trained_model.onnx
optuna_studies/: exp_augmentation_study.db  exp_augmentation_study_v2.db  exp_augmentation_study_v3.db  exp_augmentation_study_v4.db  exp_augmentation_study_v5.db  optuna_study.db  optuna_study_v3.db
src/: data_augmentation.py  dataset.py  plots.py  random_forest_train.py
src/models/: HAIKU.py  random_forest.py
src/optimization/: __init__.py  optuna_tuner.py
tests/config/: config_loader_test.py
utils/: utils.py
