[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "japanese_speaker_recognition"
version = "0.0.1"
description = "This project develops a machine learning classifier to identify one of nine japanese male speakers based on short 12-channel time-series recordings of the vowel /ae/."
authors = [
  { name = "Team 10" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.5"
dependencies = [
    "basedpyright>=1.31.7",
    "joblib>=1.5.2",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "pre-commit>=4.3.0",
    "pyyaml>=6.0.3",
    "ruff>=0.14.1",
    "scikit-learn>=1.7.2",
]


[tool.ruff]
line-length = 99
src = ["japanese_speaker_recognition"]
include = ["pyproject.toml", "japanese_speaker_recognition/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["japanese_speaker_recognition"]
force-sort-within-sections = true

